@@ -15,6 +15,7 @@ fixed bugs:
 - fixed bug w.r.t. memory allocation for all values of a column in lpi_cpx.c
 - fixed bug in copy method of objvardata which should only create a new SCIP_VARDATA if the implemented subclass create a copy of the given objvardata object
 - fixed bug in propagation of indicator constraints: cannot fix slack variable to 0 if linear constraint is disabled/not active
+- fixed bug in heur_shiftandpropagate where some variables were initialized too late
 
 parameters:
 - added parameter <constraints/quadratic/disaggregate> to split a block-separable quadratic constraint into several quadratic constraint
